2008-01-21  mefyl  <hocquet@gostai.com>

	Fix previous commit.
	* .gitignore: Remove wrongly added files.
	* include/libport/file-library.hh,
	* include/libport/file-library.hxx,
	* include/libport/path.hh,
	* include/libport/path.hxx,
	* lib/libport/file-library.cc,
	* lib/libport/path.cc,
	* lib/tests/test-indent.cc: s/misc/libport/.
	* include/libport/libport.mk: Register files.

2008-01-21  mefyl  <mefyl@lrde.epita.fr>

	Add file-library and path facility.
	* .gitignore: Add generated files.
	* lib/libport/libport-sources.mk: Register new files.
	* include/libport/path.hxx,
	* include/libport/path.hh,
	* lib/libport/path.cc: New. Class to handle operations on
        paths.
	* include/libport/file-library.hh,
	* include/libport/file-library.hxx,
	* lib/libport/file-library.cc: New. Class to search files
        through a search directories list.
	* include/libport/fwd.hh: Predeclare path.

2008-01-19  Matthieu Nottale  <nottale@gostai.com>

	read_stdin throws an exception on error.
	* include/libport/read-stdin.hh: Document it.
	* lib/libport/read-stdin.cc: Do it. Better gards, safer inculdes.

2008-01-18  Akim Demaille  <demaille@gostai.com>

	Fix libport.la.
	* lib/libport/Makefile.am: We don't need to create config.h here.
	(lib_libport): Fix.
	Simplify includes.
	Use dist_ instead of EXTRA_DIST.

2008-01-18  Akim Demaille  <demaille@gostai.com>

	Fix symlinks.
	* build-aux/bootstrap: We were linking one level too high.

2008-01-18  Akim Demaille  <demaille@gostai.com>

	Fix paths.
	* build-aux/urbi-libport.m4: Don't require lib/libport/Makefile
	to be used.
	* sdk/eval_makefile.pl: Remove libport/ prefix.
	This file does exit with failure when `./config.status` failed :(
	* sdk/urbi-sdk.m4: Remove libport/ prefixes.

2008-01-18  Matthieu Nottale  <nottale@gostai.com>

        Add a method to read from stdin non-blocking.
        * include/libport/read-stdin.hh: New.
        * lib/libport-sources.mk: List the new .cc.
        * lib/read-stdin.cc: New.
